--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -28,6 +28,7 @@ dependencies:
     - field.field.node.publication.field_sort_title
     - field.field.node.publication.field_subject_blurb
     - field.field.node.publication.field_succeeding_title
+    - field.field.node.publication.field_title_notes
     - node.type.publication
   module:
     - datetime_range
@@ -47,7 +48,7 @@ third_party_settings:
         - field_last_issue_approx_date
         - field_date_description
       parent_name: ''
-      weight: 6
+      weight: 7
       format_type: details
       format_settings:
         label: 'Date of Publication'
@@ -62,7 +63,7 @@ third_party_settings:
         - field_previous_title
         - field_succeeding_title
       parent_name: ''
-      weight: 2
+      weight: 3
       format_type: details
       format_settings:
         label: 'Alternative titles'
@@ -77,7 +78,7 @@ third_party_settings:
         - field_publication_place_province
         - field_publication_place_city
       parent_name: ''
-      weight: 3
+      weight: 4
       format_type: details
       format_settings:
         label: 'Place of Publication'
@@ -94,12 +95,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 16
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
   field_abstract:
-    weight: 12
+    weight: 13
     settings:
       rows: 5
       placeholder: ''
@@ -107,7 +108,7 @@ content:
     type: text_textarea
     region: content
   field_credit:
-    weight: 13
+    weight: 14
     settings:
       rows: 5
       placeholder: ''
@@ -115,7 +116,7 @@ content:
     type: string_textarea
     region: content
   field_date_description:
-    weight: 42
+    weight: 43
     settings:
       size: 60
       placeholder: ''
@@ -165,13 +166,13 @@ content:
     type: boolean_checkbox
     region: content
   field_frequency:
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_frequency_notes:
-    weight: 8
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -222,7 +223,7 @@ content:
     type: string_textfield
     region: content
   field_geographic_coverage:
-    weight: 4
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -230,7 +231,7 @@ content:
     type: string_textfield
     region: content
   field_issn:
-    weight: 10
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -238,7 +239,7 @@ content:
     type: string_textfield
     region: content
   field_language:
-    weight: 14
+    weight: 15
     settings:
       format:
         name: name
@@ -246,7 +247,7 @@ content:
     type: languagefield_select
     region: content
   field_last_issue_approx_date:
-    weight: 41
+    weight: 42
     settings:
       size: 60
       placeholder: ''
@@ -275,7 +276,7 @@ content:
     type: string_textfield
     region: content
   field_last_issue_date:
-    weight: 40
+    weight: 41
     settings: {  }
     third_party_settings: {  }
     type: daterange_default
@@ -288,7 +289,7 @@ content:
     type: boolean_checkbox
     region: content
   field_oclc:
-    weight: 11
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -342,7 +343,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_publisher:
-    weight: 5
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
@@ -355,11 +356,33 @@ content:
     settings:
       size: 60
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      conditional_fields:
+        3eb7b996-475a-4596-9d34-c335107212c6:
+          dependee: title
+          settings:
+            state: '!visible'
+            condition: empty
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: ''
+            effect: slide
+            effect_options:
+              fade:
+                speed: '400'
+              slide:
+                speed: '300'
+            selector: ''
+          entity_type: node
+          bundle: publication
     type: string_textfield
     region: content
   field_subject_blurb:
-    weight: 9
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -375,9 +398,39 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_title_notes:
+    weight: 2
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings:
+      conditional_fields:
+        5117f7ea-a0a0-4c7b-be3c-d7518c404d55:
+          dependee: title
+          settings:
+            state: '!visible'
+            condition: empty
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: ''
+            effect: slide
+            effect_options:
+              fade:
+                speed: '400'
+              slide:
+                speed: '300'
+            selector: ''
+          entity_type: node
+          bundle: publication
+    type: string_textarea
+    region: content
   path:
     type: path
-    weight: 19
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -385,21 +438,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 17
+    weight: 18
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 20
+    weight: 21
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 18
+    weight: 19
     region: content
     third_party_settings: {  }
   title:
@@ -412,7 +465,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 15
+    weight: 16
     settings:
       match_operator: CONTAINS
       size: 60
