--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -28,6 +28,7 @@ dependencies:
     - field.field.node.publication.field_sort_title
     - field.field.node.publication.field_subject_blurb
     - field.field.node.publication.field_succeeding_title
+    - field.field.node.publication.field_title_notes
     - node.type.publication
   module:
     - datetime_range
@@ -41,7 +42,7 @@ third_party_settings:
         - field_publication_place_province
         - field_publication_place_city
       parent_name: ''
-      weight: 0
+      weight: 1
       format_type: details
       format_settings:
         id: ''
@@ -52,13 +53,14 @@ third_party_settings:
       region: content
     group_publication_dates:
       children:
+        - field_title_notes
         - field_first_issue_date
         - field_first_issue_approx_date
         - field_last_issue_date
         - field_last_issue_approx_date
         - field_date_description
       parent_name: ''
-      weight: 3
+      weight: 4
       format_type: details
       format_settings:
         id: ''
@@ -73,21 +75,21 @@ bundle: publication
 mode: default
 content:
   field_abstract:
-    weight: 10
+    weight: 11
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_credit:
-    weight: 9
+    weight: 10
     label: above
     settings: {  }
     third_party_settings: {  }
     type: basic_string
     region: content
   field_date_description:
-    weight: 10
+    weight: 11
     label: above
     settings:
       link_to_entity: false
@@ -113,7 +115,7 @@ content:
     type: daterange_default
     region: content
   field_frequency:
-    weight: 4
+    weight: 5
     label: above
     settings:
       link: true
@@ -121,7 +123,7 @@ content:
     type: entity_reference_label
     region: content
   field_frequency_notes:
-    weight: 5
+    weight: 6
     label: above
     settings:
       link_to_entity: false
@@ -129,7 +131,7 @@ content:
     type: string
     region: content
   field_geographic_coverage:
-    weight: 1
+    weight: 2
     label: above
     settings:
       link_to_entity: false
@@ -137,7 +139,7 @@ content:
     type: string
     region: content
   field_issn:
-    weight: 7
+    weight: 8
     label: above
     settings:
       link_to_entity: false
@@ -145,7 +147,7 @@ content:
     type: string
     region: content
   field_last_issue_approx_date:
-    weight: 9
+    weight: 10
     label: above
     settings:
       link_to_entity: false
@@ -153,7 +155,7 @@ content:
     type: string
     region: content
   field_last_issue_date:
-    weight: 8
+    weight: 9
     label: above
     settings:
       separator: '-'
@@ -163,7 +165,7 @@ content:
     type: daterange_default
     region: content
   field_oclc:
-    weight: 8
+    weight: 9
     label: above
     settings:
       link_to_entity: false
@@ -187,7 +189,7 @@ content:
     type: entity_reference_label
     region: content
   field_publisher:
-    weight: 2
+    weight: 3
     label: above
     settings:
       link: true
@@ -195,15 +197,22 @@ content:
     type: entity_reference_label
     region: content
   field_subject_blurb:
-    weight: 6
+    weight: 7
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
+  field_title_notes:
+    weight: 0
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
+    region: content
   links:
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
