--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -29,11 +29,13 @@ dependencies:
     - field.field.node.publication.field_sort_title
     - field.field.node.publication.field_subject_notes
     - field.field.node.publication.field_subjects
+    - field.field.node.publication.field_supplemental_information
     - field.field.node.publication.field_title_notes
     - node.type.publication
   module:
     - datetime_range
     - field_group
+    - file
     - languagefield
     - path
 third_party_settings:
@@ -52,10 +54,10 @@ third_party_settings:
       format_type: details
       format_settings:
         label: 'Date of Publication'
-        open: true
         required_fields: true
         id: ''
         classes: ''
+        open: false
       label: 'Date of Publication'
       region: content
     group_place_of_publication:
@@ -80,12 +82,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 20
+    weight: 21
     region: content
     settings: {  }
     third_party_settings: {  }
   field_continued_by:
-    weight: 18
+    weight: 19
     settings:
       match_operator: CONTAINS
       size: 60
@@ -94,7 +96,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_continues:
-    weight: 17
+    weight: 18
     settings:
       match_operator: CONTAINS
       size: 60
@@ -401,6 +403,13 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_supplemental_information:
+    weight: 17
+    settings:
+      progress_indicator: throbber
+    third_party_settings: {  }
+    type: file_generic
+    region: content
   field_title_notes:
     weight: 2
     settings:
@@ -433,7 +442,7 @@ content:
     region: content
   path:
     type: path
-    weight: 23
+    weight: 24
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -441,21 +450,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 21
+    weight: 22
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 24
+    weight: 25
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 22
+    weight: 23
     region: content
     third_party_settings: {  }
   title:
@@ -468,7 +477,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 19
+    weight: 20
     settings:
       match_operator: CONTAINS
       size: 60
