--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -29,11 +29,13 @@ dependencies:
     - field.field.node.publication.field_sort_title
     - field.field.node.publication.field_subject_notes
     - field.field.node.publication.field_subjects
+    - field.field.node.publication.field_supplemental_information
     - field.field.node.publication.field_title_notes
     - node.type.publication
   module:
     - datetime_range
     - field_group
+    - file
     - user
 third_party_settings:
   field_group:
@@ -220,6 +222,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_supplemental_information:
+    weight: 15
+    label: above
+    settings:
+      use_description_as_link_text: true
+    third_party_settings: {  }
+    type: file_default
     region: content
   field_title_notes:
     weight: 0
